Aplicado paginação nas listas
